examples/bad/ERROR_NOT_A_TUPLE/simple_not_a_tuple.st
language core;
extend with #tuples;

fn main(n : Nat) -> Nat {
  return true.1
}

//ERROR_NOT_A_TUPLE
